@@ -57,7 +57,6 @@ import java.text.DecimalFormat;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.Temporal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
@@ -771,7 +770,17 @@ public class SerdeAnnotationVisitor implements TypeElementVisitor<SerdeConfig, S
 
     private void visitProperties(ClassElement classElement, VisitorContext context) {
         final List<PropertyElement> beanProperties = classElement.getBeanProperties();
-        final List<String> order = Arrays.asList(classElement.stringValues(SerdeConfig.META_ANNOTATION_PROPERTY_ORDER));
+        final List<String> order;
+        if (classElement.booleanValue(SerdeConfig.META_ANNOTATION_PROPERTY_ORDER, "alphabetic").orElse(false)) {
+            List<String> newOrder = beanProperties.stream()
+                .map(p -> p.stringValue(SerdeConfig.class, SerdeConfig.PROPERTY).orElseGet(p::getName))
+                .sorted()
+                .toList();
+            classElement.annotate(SerdeConfig.META_ANNOTATION_PROPERTY_ORDER, b -> b.values(newOrder.toArray(new String[0])));
+            order = new ArrayList<>(newOrder);
+        } else {
+            order = new ArrayList<>(List.of(classElement.stringValues(SerdeConfig.META_ANNOTATION_PROPERTY_ORDER)));
+        }
         Collections.reverse(order);
         final Set<Introspected.AccessKind> access = CollectionUtils.setOf(classElement.enumValues(Introspected.class,
                                                                                              "accessKind",
@@ -809,25 +818,33 @@ public class SerdeAnnotationVisitor implements TypeElementVisitor<SerdeConfig, S
         }
     }
 
-    private void handleClassImport(VisitorContext context, AnnotationValue<SerdeImport> value, ClassElement c, List<AnnotationClassValue<?>> classValues) {
-        classValues.add(new AnnotationClassValue<>(c.getName()));
+    private void handleClassImport(VisitorContext context,
+                                   AnnotationValue<SerdeImport> value,
+                                   ClassElement type,
+                                   List<AnnotationClassValue<?>> classValues) {
+        classValues.add(new AnnotationClassValue<>(type.getName()));
         final ClassElement mixinType = value.stringValue("mixin").flatMap(context::getClassElement)
                 .orElse(null);
-        if (mixinType != null) {
-            visitMixin(mixinType, c);
-        } else {
-            visitClassInternal(c, context, true);
+        if (value.booleanValue("serializable").orElse(true)) {
+            type.annotate(Serdeable.Serializable.class);
         }
-        c.annotate(value);
-        AnnotationValue<Annotation> jsonPojoAnn = c.getAnnotation("com.fasterxml.jackson.databind.annotation.JsonPOJOBuilder");
+        if (value.booleanValue("deserializable").orElse(true)) {
+            type.annotate(Serdeable.Deserializable.class);
+        }
+        if (mixinType != null) {
+            visitMixin(mixinType, type, context);
+        } else {
+            visitClassInternal(type, context, true);
+        }
+        AnnotationValue<Annotation> jsonPojoAnn = type.getAnnotation("com.fasterxml.jackson.databind.annotation.JsonPOJOBuilder");
         if (jsonPojoAnn != null) {
             String buildMethod = jsonPojoAnn.stringValue("buildMethodName").orElse("build");
-            c.getEnclosedElement(ElementQuery.ALL_METHODS.named(n -> n.equals(buildMethod)))
+            type.getEnclosedElement(ElementQuery.ALL_METHODS.named(n -> n.equals(buildMethod)))
                 .ifPresent(m -> m.annotate(Executable.class));
         }
     }
 
-    private void visitMixin(ClassElement mixinType, ClassElement type) {
+    private void visitMixin(ClassElement mixinType, ClassElement type,  VisitorContext context) {
         AnnotationValue<Introspected> introspectedAnnotation = mixinType.getAnnotation(Introspected.class);
         if (introspectedAnnotation != null) {
             type.annotate(introspectedAnnotation);
@@ -838,7 +855,7 @@ public class SerdeAnnotationVisitor implements TypeElementVisitor<SerdeConfig, S
                 .stream().filter(n -> n.startsWith("io.micronaut.serde"))
                 .forEach(n -> {
                     final AnnotationValue<Annotation> ann = mixinType.getAnnotation(n);
-                    if (ann != null) {
+                    if (ann != null && !ann.getAnnotationName().equals(SerdeImport.class.getName())) {
                         type.annotate(ann);
                     }
                 });
@@ -906,6 +923,7 @@ public class SerdeAnnotationVisitor implements TypeElementVisitor<SerdeConfig, S
                                 i.remove();
                                 replicateAnnotations(serdeMethod, beanProperty);
                                 replicateAnnotations(serdeMethod, readMethod);
+                                visitMethod(readMethod, context);
                             }
                         }
                     }
@@ -915,6 +933,7 @@ public class SerdeAnnotationVisitor implements TypeElementVisitor<SerdeConfig, S
                                 i.remove();
                                 replicateAnnotations(serdeMethod, beanProperty);
                                 replicateAnnotations(serdeMethod, writeMethod);
+                                visitMethod(writeMethod, context);
                             }
                         }
                     }
@@ -934,6 +953,7 @@ public class SerdeAnnotationVisitor implements TypeElementVisitor<SerdeConfig, S
                 ).ifPresent(m -> {
                     m.annotate(Executable.class);
                     replicateAnnotations(serdeMethod, m);
+                    visitMethod(m, context);
                 });
             }
         }
